9_Build_Web_App/ingress_result.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ingress.kubernetes.io/add-base-url: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite /result/(.*) $1 break;
spec:
  rules:
    - http:
        paths:
          - path: /result
            backend:
              serviceName: result
              servicePort: 5001


# kubectl version 1.21以降の場合のSyntax:
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: result
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     # ingress.kubernetes.io/add-base-url: "true"
#     # nginx.ingress.kubernetes.io/configuration-snippet: |
#     #   rewrite /result/(.*) $1 break;
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /result
#         pathType: Prefix
#         backend:
#           service:
#             name: result
#             port:
#               number: 5001
